Fix bug where map player box was wrapping on some computers. Fixe dexterity wasn't applying damage because I wasn't checking range in the right place.

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ button {
     position: relative;
     padding: 5px;
     box-sizing: border-box;
-    width: 225px;
+    width: 224px;
     height: 236px;
     display: inline-block;
     border: 1px solid black;
